added dialog and other functionalities

--- a/src/main/resources/main.fxml
+++ b/src/main/resources/main.fxml
@@ -10,13 +10,13 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="me.eforth.MainController">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/17.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="me.eforth.MainController">
    <children>
       <MenuBar>
         <menus>
           <Menu mnemonicParsing="false" text="File">
             <items>
-                  <MenuItem mnemonicParsing="false" text="New" />
+                  <MenuItem mnemonicParsing="false" onAction="#onNew" text="New" />
               <MenuItem mnemonicParsing="false" text="Close" />
             </items>
           </Menu>
@@ -43,13 +43,14 @@
             <Font name="System Bold" size="18.0" />
          </font>
       </Label>
-      <TableView maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="200.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
+      <TableView fx:id="bookTable" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="200.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
         <columns>
-          <TableColumn minWidth="200.0" text="Title" />
-          <TableColumn minWidth="75.0" prefWidth="75.0" text="Edition" />
-            <TableColumn minWidth="120.0" prefWidth="120.0" text="Author" />
-            <TableColumn minWidth="75.0" prefWidth="75.0" text="Publisher" />
-            <TableColumn minWidth="130.0" prefWidth="105.0" text="Categories" />
+            <TableColumn fx:id="isbnColumn" minWidth="100.0" text="ISBN" />
+          <TableColumn fx:id="titleColumn" minWidth="200.0" text="Title" />
+          <TableColumn fx:id="editionColumn" minWidth="75.0" prefWidth="75.0" text="Edition" />
+            <TableColumn fx:id="authorColumn" minWidth="120.0" prefWidth="120.0" text="Author" />
+            <TableColumn fx:id="publisherColumn" minWidth="75.0" prefWidth="75.0" text="Publisher" />
+            <TableColumn fx:id="categoriesColumn" minWidth="130.0" prefWidth="105.0" text="Categories" />
         </columns>
       </TableView>
    </children>
