--- a/src/main/resources/main.fxml
+++ b/src/main/resources/main.fxml
@@ -22,6 +22,7 @@
           </Menu>
           <Menu mnemonicParsing="false" text="Edit">
             <items>
+              <MenuItem mnemonicParsing="false" text="Edit Book" onAction="#onEdit" />
               <MenuItem mnemonicParsing="false" text="Delete" />
             </items>
           </Menu>
